# prediction_market_maker

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: api_keys.md  tutorials.md
examples/kalshi/: clients.py  main.py
src/: __init__.py
src/app/: main.py  run_backtest.py  run_live.py
src/backtest/: engine.py  scenarios.py
src/config/: default.yaml
src/core/: clock.py  events.py  types.py  utils.py
src/exec/: router.py  throttle.py
src/io/: metrics.py  persistence.py
src/pricing/: base.py  cpmm.py  inventory.py  lmsr.py
src/risk/: exposure.py  kill_switch.py  limits.py
src/state/: book.py  store.py
src/strategy/: amm_liquidity.py  base.py  binary_mm.py
src/venue/: base.py  kalshi.py  kalshi_auth.py  mock.py  polymarket.py  ws_client.py
tests/: test_live_kalshi.py  test_live_polymarket.py  test_lmsr.py  test_risk.py  test_strategy.py  test_venue_adapters.py  test_ws_clients.py
